--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@
 
 body {
   display: grid;
-  place-content: center;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
-  margin: 0 auto;
   font-family: 'Manrope', sans-serif;
   color: var(--very-dark-grayish-blue);
   background-color: var(--light-grayish-blue);
@@ -138,4 +138,45 @@ body {
 .avatar-section .share-button img {
   width: 20px;
   object-fit: cover;
+}
+
+@media (max-width: 1100px) {
+
+  body {
+    display: grid;
+    justify-content: center;
+    align-items: start;
+  }
+
+  .main-container {
+    max-width: 350px;
+    max-height: 300px;
+    display: grid;
+    grid-template-columns: 1fr;
+    background-color: rgb(255, 255, 255);
+    border-radius: 12px;
+    margin-top: 20px;
+    /* letter-spacing: 1px; */
+  }
+
+  .main-container .main-img {
+    width: 400px;
+    height: 250px;
+    object-fit: cover;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 12px;
+   }
+
+  .card {
+    background-color: white;
+    height: 380px;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+  }
+  
+  .card-text h2 {
+    margin-bottom: 20px;
+    margin-top: 0px;
+  }
 }
